--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -55,7 +55,7 @@
 		<view class="flexTitle">
 			<view class="w30">特殊要求</view>
 			<view class="w70 flex" style="color: #FA9036;">
-				<view>{{orderDetail.time_data[0].is_send===1?'产前寄送样':''}}</view><view wx:if="{{orderDetail.time_data[0].is_before_confirm===1}}">，</view>
+				<view>{{orderDetail.time_data[0].is_send===1?'产前样寄送':''}}</view><view wx:if="{{orderDetail.time_data[0].is_before_confirm===1}}">，</view>
 				<view>{{orderDetail.time_data[0].is_before_confirm===1?'产前确认':''}}</view><view wx:if="{{orderDetail.time_data[0].is_urgent===1}}">，</view>
 				<view>{{orderDetail.time_data[0].is_urgent===1?'加急':''}}</view>
 			</view>
@@ -1186,6 +1186,6 @@
 		</view>
 	</l-mask>
 
-	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="1"
+	<check-detail show="{{showCheckDetail}}" pid="{{orderDetail.time_data[0].id}}" is_check="{{orderDetail.time_data[0].is_check !== 4}}" check_type="1"
 		bind:cancel="closeCheckDetail"></check-detail>
 </view>
